--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -16,7 +16,7 @@
                 <div ng-message="duplicate">@FlashcardResources.SameName</div>
             </div>
         </md-input-container>
-        <button type="button" ng-click="f.publish()" ng-disabled="f.disabled" class="action-btn">@GeneralResources.Create</button>
+        <button type="button" ng-click="f.publish()" ng-disabled="f.disabled" class="action-btn">@FlashcardResources.Create</button>
     </div>
     <div class="flashcard-body">
         <div layout="row" layout-align="space-between center" class="header">
@@ -69,7 +69,7 @@
         </ol>
     </div>
     <div class="bottom">
-        <button type="button" ng-click="f.publish()" ng-disabled="f.disabled" class="action-btn">@GeneralResources.Create</button>
+        <button type="button" ng-click="f.publish()" ng-disabled="f.disabled" class="action-btn">@FlashcardResources.Create</button>
     </div>
 </form>
 <script type="text/ng-template" id="card-form.html">
