changes in flashcard

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    <nav multiswitch-when="1|2" class="buttons">
+    <nav multiswitch-when="1" class="buttons">
         <button type="button" class="prev" keyboard-action="37" ng-click="f.prev()" ng-disabled="f.slidepos == 0">
             <md-icon md-svg-icon="t:arrow"></md-icon>
         </button>
