--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -712,6 +712,9 @@
                 .card-content .side {
                     .img-container, .text-container {
                         width: 100%;
+
+                       
+
                     }
                 }
             }
@@ -768,6 +771,18 @@
                     .text-container {
                         .displayFlex;
                         .align-items(center);
+                         p {
+                            font-size:48px;
+                            overflow:auto;
+                            
+                            height:100%;
+                           
+                            &.lessText {
+                                margin:0 auto;
+                                display:flex;
+                                align-items:center;
+                            }
+                        }
                     }
 
                     .img-container ~ .text-container {
