Some mobile fixes.

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -612,6 +612,7 @@
             }
             //.my-element.ng-hide-add-active,
             &.ng-hide-add {
+                display:block !important;
                 animation-name: cardOut;
                 animation-duration: 0.3s;
                 animation-timing-function: ease-out;
@@ -622,6 +623,7 @@
             }
 
             &.ng-hide-remove {
+                display:block !important;
                 animation-name: cardIn;
                 animation-duration: 0.3s;
                 animation-timing-function: ease-out;
