--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -98,7 +98,7 @@
         </div>
     </div>
     <div multiswitch-when="1" class="card-player angular-animate" card-scroll>
-        <div ng-attr-id="card{{::$index}}" class="card-template angular-animate" ng-hide="$index !== f.slidepos && f.notMobile" ng-class="{front: f.style==true,back:f.style==false,both:f.style==null}" ng-repeat="slide in ::f.cards">
+        <div ng-attr-id="card{{::$index}}" class="card-template angular-animate" my-hide="$index !== f.slidepos && f.notMobile" ng-class="{front: f.style==true,back:f.style==false,both:f.style==null}" ng-repeat="slide in ::f.cards">
             <div class="flip-container">
                 @*<button type="button" class="pin-btn" ng-click="f.pin()" ng-class="{pinned:slide.pin}">
                         <md-icon md-svg-icon="b:pin"></md-icon>
